--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-arrow = "42.0.0"
+arrow = { version = "42.0.0", features = ["prettyprint"] }
 bytes = "1.4"
 chrono = "0.4.26"
 flate2 = "1"
