--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,12 @@ prost = { version = "0.11.9" }
 lazy_static = "1.4.0"
 snafu = "0.7.4"
 zigzag = "0.1.0"
+tokio = { version = "1.28.2", features = [
+    "io-util",
+    "sync",
+    "fs",
+    "macros",
+    "rt",
+] }
+futures = { version = "0.3.28", default-features = false, features = ["std"] }
+futures-util = "0.3.28"
