--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,12 @@ license = "MIT/Apache-2.0"
 description = "Yet another unofficial implementation of Apache ORC spec in safe Rust"
 keywords = ["arrow", "orc", "arrow-rs"]
 include = ["src/**/*.rs", "Cargo.toml"]
+rust-version = "1.70"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-arrow = { version = "40.0.0", features = ["prettyprint"] }
+arrow = { version = "43.0.0", features = ["prettyprint"] }
 bytes = "1.4"
 chrono = "0.4.26"
 flate2 = "1"
